--- a/KafkaConsumer/src/main/resources/application.properties
+++ b/KafkaConsumer/src/main/resources/application.properties
@@ -3,8 +3,12 @@ spring.kafka.bootstrap-servers=kafka:9092
 spring.kafka.consumer.group-id=my-group
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+# JSON Kafka Message Consumer Configuration (JSON Messages)
+spring.kafka.producer.properties.spring.json.trusted.packages=*
+
+# Newly Started Consumer will read message from the earliest offset in the Kafka topic.
 spring.kafka.consumer.auto-offset-reset=earliest
+
 #server.port is only required for Spring Boot Web Applications (such as REST APIs).
 #server.port=8282
 #spring.kafka.bootstrap-servers=[::1]:9092
-
